[b][color=orange]v4.46[/color], 16.02.2020[/b][list]
[*]Updated some skins.
[*]Changed the texture on BigWigs/Details.
[*]Changed the Vehicle Exit Button texture. #82
[*]Added option for the MicroBar to change the backdrop. #75
[*]Use different Role Icons on the UnitFrames. Thx Peri
[*]Updated TooltipIcons.[/list]


[b][color=orange]v4.45[/color], 10.02.2020[/b][list]
[*]Fix errors on install, if ElvUI install is not finished:
   always make sure you finish first the ElvUI install!![/list]


[b][color=orange]v4.44[/color], 08.02.2020[/b][list]
[*]Add '/muierrors on' and '/muierrors off' commands to quickly disable/enable only ElvUI + my AddOn.
[*]Try to fix a talent skin error.
[*]Some Options color update.[/list]


[b][color=orange]v4.43[/color], 05.02.2020[/b][list]
[*]Take account to the new ElvUI Options update.
[*]Added a chat alert for placed items.
[*]Cleanup/Update my install file.
[*]Try to fix an lua error in HealPrediction.
[*]Remove Mover Transparency options.[/list]


[b][color=orange]v4.42[/color], 19.01.2020[/b][list]
[*]Fixed Aura positions in my Install.
[*]Fixed a quest lua error. Damn tables >.<[/list]


[b][color=orange]v4.41[/color], 18.01.2020[/b][list]
[*]Change the default position from the "new" Vehicle Exit Button.
[*]Enable "Swap to AltPower" on Party Frames.
[*]Create a new Options for my Panels: .. Modules - Panels. You can now individually enable/disable them.
[*]Split the Quest Options. #78
[*]Small Layout tweaks.[/list]


[b][color=orange]v4.40 for Patch 8.3[/color], 15.01.2020[/b][list]
[*]Code update/fixes for Patch 8.3.
[*]Small Layout updates.
[*]Added a Killing Blow feature. Credits: Shadow & Light.
[*]Added a friend counter on the Friends Frame.
[*]Readd compatibility code. Credits: NihilisticPandemonium.
[*]Updated GothamNarrow Font.
[*]Added a CVar options.
[*]Added a random toy macro. See misc options.
[*]Change the guild rank color in tooltip, if someone is in another guild.[/list]

