@@ -16,12 +16,14 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Updated some skins",
-		"• Changed the texture on BigWigs/Details",
-		"• Changed the Vehicle Exit Button texture",
-		"• Added option for the MicroBar to change the backdrop",
-		"• Use different Role Icons on the UnitFrames",
-		"• Updated TooltipIcons",
+		"• Fixed MicroBar Styling",
+		"• Removed the ActionBar toggle buttons",
+		"• Updated Tags and use new Tags from ElvUI",
+		"• Removed some bad installer settings. THX Simpy",
+		"• Tweak/Cleanup my Armory Module",
+		"• Added CorruptionsTooltip: All Credits belong Anayanka (Defias Brotherhood - EU)",
+		"• Added an option to change Minimap Blip textures",
+		"• Some skin/code tweaks",
 
 		-- "• ''",
 	" ",
