@@ -1,3 +1,14 @@
+[b][color=orange]v4.47[/color], xx.xx.2020[/b][list]
+[*]Fixed MicroBar Styling.
+[*]Removed the ActionBar toggle buttons.
+[*]Updated Tags and use new Tags from ElvUI.
+[*]Removed some bad installer settings. THX Simpy.
+[*]Tweak/Cleanup my Armory Module.
+[*]Added CorruptionsTooltip: All Credits belong Anayanka (Defias Brotherhood - EU)
+[*]Added an option to change Minimap Blip textures.
+[*]Some skin/code tweaks.[/list]
+
+
 [b][color=orange]v4.46[/color], 16.02.2020[/b][list]
 [*]Updated some skins.
 [*]Changed the texture on BigWigs/Details.
